@@ -279,8 +279,6 @@ extern bool debug;
 
 extern int is_mb_char (int ch, mbstate_t *ps);
 extern void initialize_mbcs (void);
-extern void register_cleanup_file (char const *file);
-extern void cancel_cleanup (void);
 
 /* Use this to suppress gcc's '...may be used before initialized' warnings. */
 #ifdef lint
