@@ -17,6 +17,9 @@ GNU sed NEWS                                    -*- outline -*-
   Private Use Area plane B).
   [bug introduced in sed 4.8]
 
+  I/O errors involving temp files no longer confuse sed into using a
+  FILE * pointer after fclosing it, which has undefined behavior in C.
+
 ** New Features
 
   The 'r' command now accepts address 0, allowing inserting a file before
